--- a/Visualization/styleSheet.css
+++ b/Visualization/styleSheet.css
@@ -3,6 +3,8 @@ body{
     height: 100%;
 }
 #map{
-    width: 1000px;
+    width: 100%;
     height: 600px;
+    position:absolute;
+    left: 0px;
 }
